ci: build arm64 docker only on ubuntu

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -227,7 +227,6 @@ jobs:
           - ubuntu-24.04
         platform:
           - linux/amd64
-          - linux/arm64
         container:
           - { file: "ubuntu-llvm.dockerfile", image: "setup-cpp-ubuntu-llvm", tag: "22.04-0.46.2" }
           - { file: "fedora-llvm.dockerfile", image: "setup-cpp-fedora-llvm", tag: "40-0.46.2" }
@@ -235,9 +234,13 @@ jobs:
           - { file: "ubuntu-mingw.dockerfile", image: "setup-cpp-ubuntu-mingw", tag: "22.04-0.46.2" }
           # - { file: "fedora-mingw.dockerfile", image: "setup-cpp-fedora-mingw", tag: "40-0.46.2" }
           # - { file: "arch-mingw.dockerfile", image: "setup-cpp-arch-mingw", tag: "base-0.46.2" }
-        exclude:
-          - platform: linux/arm64
-            container: { file: "arch-llvm.dockerfile", image: "setup-cpp-arch-llvm", tag: "base-0.46.2" }
+        include:
+          - os: ubuntu-24.04
+            platform: linux/arm64
+            container: { file: "ubuntu-llvm.dockerfile", image: "setup-cpp-ubuntu-llvm", tag: "22.04-0.46.2" }
+          - os: ubuntu-24.04
+            platform: linux/arm64
+            container: { file: "ubuntu-mingw.dockerfile", image: "setup-cpp-ubuntu-mingw", tag: "22.04-0.46.2" }
     steps:
       - uses: actions/checkout@v4
         with:
