ci: install qemu 7 for cross compilation [skip test]

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -105,6 +105,7 @@ jobs:
         uses: pnpm/action-setup@v4
 
       - name: Cache node_modules
+        if: ${{ !contains(matrix.os, 'windows') }}
         uses: actions/cache@v4
         with:
           path: |
@@ -254,8 +255,12 @@ jobs:
       - name: Set up QEMU
         if: contains(matrix.platform, 'arm64')
         uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+          image: tonistiigi/binfmt:qemu-v7.0.0
 
       - name: Set up Docker Buildx
+        if: contains(matrix.platform, 'arm64')
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
