--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -171,6 +171,7 @@ jobs:
         uses: pnpm/action-setup@v4
 
       - name: Cache node_modules
+        if: ${{ !contains(matrix.os, 'windows') }}
         uses: actions/cache@v4
         with:
           path: |
