--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -257,6 +257,11 @@ jobs:
       - name: Set up Docker Buildx
         if: contains(matrix.platform, 'arm64')
         uses: docker/setup-buildx-action@v3
+        with:
+          version: v0.19.0
+          driver-opts: |
+            network=host
+            image=moby/buildkit:v0.19.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
