--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -252,15 +252,11 @@ jobs:
         uses: docker/setup-qemu-action@v3
         with:
           platforms: arm64
+          image: tonistiigi/binfmt:qemu-v7.0.0
 
       - name: Set up Docker Buildx
         if: contains(matrix.platform, 'arm64')
         uses: docker/setup-buildx-action@v3
-        with:
-          version: v0.19.0
-          driver-opts: |
-            network=host
-            image=moby/buildkit:v0.19.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
