fix: disable vcpkg based on dpkg arch

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -42,11 +42,13 @@ words:
   - dearmor
   - deps
   - devel
+  - dpkg
   - dprint
   - DVCPKG
   - dyld
   - eabi
   - envosman
+  - esac
   - esmodule
   - execa
   - ftxui
