ci: skip build tests on arm64 due to vcpkg

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -288,7 +288,7 @@ jobs:
           cache-to: type=inline
 
       - name: Test LLVM
-        if: ${{ !contains(github.event.head_commit.message, '[skip test]') }}
+        if: ${{ !contains(github.event.head_commit.message, '[skip test]') && !contains(matrix.platform, 'arm64') }}
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -310,7 +310,7 @@ jobs:
           cache-to: type=inline
 
       - name: Test Mingw
-        if: ${{ !contains(github.event.head_commit.message, '[skip test]') && !contains(matrix.container.distro, 'fedora') }}
+        if: ${{ !contains(github.event.head_commit.message, '[skip test]') && !contains(matrix.container.distro, 'fedora') && !contains(matrix.platform, 'arm64') }}
         uses: docker/build-push-action@v6
         with:
           context: .
