--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "test.lint.root.eslint": "eslint './{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.biome": "biome check",
     "test.lint.dprint": "dprint check",
+    "test.docker": "node ./dev/docker/ci/docker-test.mjs",
     "test": "turbo test && jest --runInBand --forceExit --coverage",
     "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs"
   },
@@ -108,6 +109,7 @@
     "eslint-config-atomic": "^1.22.1",
     "exec-powershell": "workspace:*",
     "execa": "^7",
+    "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
