--- a/action.yml
+++ b/action.yml
@@ -157,6 +157,9 @@ inputs:
   python:
     description: "Wether to install python (true/false) or the specific version to install."
     required: false
+  nodePackageManager:
+    description: "The node package manager to use (npm/yarn/pnpm) when installing setup-cpp globally"
+    required: false
 
 runs:
   using: "node20"
