test: add script for docker image structure tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,8 @@
   "prettier.enable": false,
   "javascript.preferences.importModuleSpecifierEnding": "js",
   "typescript.preferences.importModuleSpecifierEnding": "js",
-  "eslint.useESLintClass": true
+  "eslint.useESLintClass": true,
+  "yaml.schemas": {
+    "https://json.schemastore.org/container-structure-test.json": "/dev/docker/ci/tests/*.yml"
+  }
 }
