--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "test.lint.root.eslint": "eslint './{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.biome": "biome check",
     "test.lint.dprint": "dprint check",
-    "test.docker": "node ./dev/docker/ci/docker-test.mjs",
+    "test.docker": "tsx ./dev/docker/ci/tests/index.mts",
     "test": "turbo test && jest --runInBand --forceExit --coverage",
     "build.docker-ci": "node ./dev/docker/ci/docker-ci.mjs"
   },
@@ -144,6 +144,7 @@
     "timers-browserify": "^2.0.12",
     "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
+    "tsx": "^4.19.3",
     "turbo": "2.4.4",
     "typescript": "^5.8.2",
     "ubuntu-version": "^2.0.0",
