test: log in as bash in the container tests

--- a/dev/docker/ci/tests/gcc.yml
+++ b/dev/docker/ci/tests/gcc.yml
@@ -2,10 +2,10 @@ schemaVersion: 2.0.0
 
 commandTests:
   - name: gcc
-    command: /usr/bin/gcc
-    args: ["--version"]
+    command: bash
+    args: ["-l", "-c", "gcc --version"]
     expectedOutput: [".*gcc.*"]
   - name: g++
-    command: /usr/bin/g++
-    args: ["--version"]
-    expectedOutput: [".*g++.*"]
+    command: bash
+    args: ["-l", "-c", "g++ --version"]
+    expectedOutput: [".*g\\+\\+.*"]
