--- a/dev/docker/ci/tests/llvm.yml
+++ b/dev/docker/ci/tests/llvm.yml
@@ -2,11 +2,10 @@ schemaVersion: 2.0.0
 
 commandTests:
   - name: clang
-    command: /usr/lib/llvm-19/bin/clang
-    args: ["--version"]
-    expectedOutput: [".*clang.*"]
-
-fileExistenceTests:
-  - name: "llvm"
-    path: "/root/llvm"
-    shouldExist: true
+    command: bash
+    args: ["-l", "-c", "clang --version"]
+    expectedOutput: [".*clang version.*"]
+  - name: clang++
+    command: bash
+    args: ["-l", "-c", "clang++ --version"]
+    expectedOutput: [".*clang version.*"]
