--- a/dev/docker/ci/tests/mingw.yml
+++ b/dev/docker/ci/tests/mingw.yml
@@ -2,16 +2,16 @@ schemaVersion: 2.0.0
 
 commandTests:
   - name: mingw c compiler
-    command: x86_64-w64-mingw32-gcc
-    args: ["--version"]
+    command: bash
+    args: ["-l", "-c", "x86_64-w64-mingw32-gcc --version"]
     expectedOutput: [".*x86_64-w64-mingw32-gcc.*"]
   - name: mingw c++ compiler
-    command: x86_64-w64-mingw32-g++
-    args: ["--version"]
-    expectedOutput: [".*x86_64-w64-mingw32-g\\+\\+*"]
+    command: bash
+    args: ["-l", "-c", "x86_64-w64-mingw32-g++ --version"]
+    expectedOutput: [".*x86_64-w64-mingw32-g\\+\\+.*"]
   - name: powershell
-    command: pwsh
-    args: ["-Version"]
+    command: bash
+    args: ["-l", "-c", "pwsh --version"]
     expectedOutput: [".*PowerShell.*"]
 
 fileExistenceTests:
