--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,7 +18,7 @@
     },
     {
       "matchDatasources": ["npm"],
-      "matchPackageNames": ["eslint", "numerous", "execa"],
+      "matchPackageNames": ["eslint", "numerous", "execa", "which", ",@types/eslint"],
       "rangeStrategy": "pin"
     }
   ]
