--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -253,6 +253,9 @@ jobs:
         with:
           name: dist
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         if: ${{ github.event_name != 'pull_request' }}
