--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -253,6 +253,11 @@ jobs:
         with:
           name: dist
 
+      - name: Define Platform Suffix
+        id: platform
+        run: |
+          echo "suffix=${{ matrix.platform == 'linux/amd64' && 'linux-amd64' || 'linux-arm64' }}" >> $GITHUB_OUTPUT
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -270,9 +275,16 @@ jobs:
           file: ./dev/docker/ci/${{ matrix.container.distro }}.dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           platforms: ${{ matrix.platform }}
-          tags: aminya/${{ matrix.container.image }}:${{ matrix.container.tag }},aminya/${{ matrix.container.image }}:latest
+          tags: aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }}
           cache-from: type=registry,ref=aminya/${{ matrix.container.image }}:latest
           cache-to: type=inline
+
+      - name: Tag latest locally
+        run: docker tag aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}:latest
+
+      - name: Push latest to Docker Hub
+        if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'ubuntu' }}
+        run: docker push aminya/${{ matrix.container.image }}:latest
 
       - name: Docker Readme for setup-cpp-${{matrix.container.distro }}
         if: ${{ github.event_name != 'pull_request' }}
@@ -290,9 +302,16 @@ jobs:
           file: ./dev/docker/ci/${{ matrix.container.distro }}-llvm.dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           platforms: ${{ matrix.platform }}
-          tags: aminya/${{ matrix.container.image }}-llvm:${{ matrix.container.tag }},aminya/${{ matrix.container.image }}-llvm:latest
+          tags: aminya/${{ matrix.container.image }}-llvm:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }}
           cache-from: type=registry,ref=aminya/${{ matrix.container.image }}-llvm:latest
           cache-to: type=inline
+
+      - name: Tag latest locally
+        run: docker tag aminya/${{ matrix.container.image }}-llvm:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}-llvm:latest
+
+      - name: Push latest to Docker Hub
+        if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'ubuntu' }}
+        run: docker push aminya/${{ matrix.container.image }}-llvm:latest
 
       - name: Docker Readme for setup-cpp-${{matrix.container.distro }}-llvm
         if: ${{ github.event_name != 'pull_request' }}
@@ -320,9 +339,16 @@ jobs:
           file: ./dev/docker/ci/${{ matrix.container.distro }}-gcc.dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           platforms: ${{ matrix.platform }}
-          tags: aminya/${{ matrix.container.image }}-gcc:${{ matrix.container.tag }},aminya/${{ matrix.container.image }}-gcc:latest
+          tags: aminya/${{ matrix.container.image }}-gcc:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }}
           cache-from: type=registry,ref=aminya/${{ matrix.container.image }}-gcc:latest
           cache-to: type=inline
+
+      - name: Tag latest locally
+        run: docker tag aminya/${{ matrix.container.image }}-gcc:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}-gcc:latest
+
+      - name: Push latest to Docker Hub
+        if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'ubuntu' }}
+        run: docker push aminya/${{ matrix.container.image }}-gcc:latest
 
       - name: Docker Readme for setup-cpp-${{matrix.container.distro }}-gcc
         if: ${{ github.event_name != 'pull_request' }}
@@ -351,9 +377,16 @@ jobs:
           file: ./dev/docker/ci/${{ matrix.container.distro }}-mingw.dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           platforms: ${{ matrix.platform }}
-          tags: aminya/${{ matrix.container.image }}-mingw:${{ matrix.container.tag }},aminya/${{ matrix.container.image }}-mingw:latest
+          tags: aminya/${{ matrix.container.image }}-mingw:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }}
           cache-from: type=registry,ref=aminya/${{ matrix.container.image }}-mingw:latest
           cache-to: type=inline
+
+      - name: Tag latest locally
+        run: docker tag aminya/${{ matrix.container.image }}-mingw:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}-mingw:latest
+
+      - name: Push latest to Docker Hub
+        if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'ubuntu' }}
+        run: docker push aminya/${{ matrix.container.image }}-mingw:latest
 
       - name: Docker Readme for setup-cpp-${{matrix.container.distro }}-mingw
         if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'fedora' }}
@@ -373,6 +406,48 @@ jobs:
           push: false
           platforms: ${{ matrix.platform }}
           tags: aminya/test-${{ matrix.container.image }}-mingw:${{ matrix.container.tag }}
+
+  Docker-Manifest:
+    needs: [Docker]
+    runs-on: ubuntu-24.04
+    if: ${{ github.event_name != 'pull_request' }}
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: aminya
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Enable experimental features
+        run: |
+          mkdir -p ~/.docker
+          echo '{"experimental": "enabled"}' > ~/.docker/config.json
+
+      - name: Create and push multi-arch manifests
+        run: |
+          TAG="22.04-1.1.1"
+          DISTRO="ubuntu"
+
+          # Create and push manifests for each variant
+          VARIANTS=("" "-llvm" "-gcc" "-mingw")
+          for VARIANT in "${VARIANTS[@]}"; do
+              echo "Creating manifest for setup-cpp-$DISTRO$VARIANT"
+              
+              # Create versioned manifest
+              docker manifest create "aminya/setup-cpp-$DISTRO$VARIANT:$TAG" \
+                "aminya/setup-cpp-$DISTRO$VARIANT:$TAG-linux-amd64" \
+                "aminya/setup-cpp-$DISTRO$VARIANT:$TAG-linux-arm64"
+              docker manifest push "aminya/setup-cpp-$DISTRO$VARIANT:$TAG"
+              
+              # Create latest manifest
+              docker manifest create "aminya/setup-cpp-$DISTRO$VARIANT:latest" \
+                "aminya/setup-cpp-$DISTRO$VARIANT:$TAG-linux-amd64" \
+                "aminya/setup-cpp-$DISTRO$VARIANT:$TAG-linux-arm64"
+              docker manifest push "aminya/setup-cpp-$DISTRO$VARIANT:latest"
+          done
 
   Release:
     if: startsWith(github.ref, 'refs/tags/')
