--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -285,7 +285,9 @@ jobs:
           cache-to: type=inline
 
       - name: Tag latest locally
-        run: docker tag ${{ steps.build_base.outputs.imageid }} aminya/${{ matrix.container.image }}:latest
+        run: |
+          docker pull aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }}@${{ steps.build_base.outputs.imageid }}
+          docker tag aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}:latest
 
       - name: Push latest to Docker Hub
         if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'ubuntu' }}
@@ -313,7 +315,9 @@ jobs:
           cache-to: type=inline
 
       - name: Tag latest locally
-        run: docker tag ${{ steps.build_llvm.outputs.imageid }} aminya/${{ matrix.container.image }}-llvm:latest
+        run: |
+          docker pull aminya/${{ matrix.container.image }}-llvm:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }}@${{ steps.build_llvm.outputs.imageid }}
+          docker tag aminya/${{ matrix.container.image }}-llvm:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}-llvm:latest
 
       - name: Push latest to Docker Hub
         if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'ubuntu' }}
@@ -351,7 +355,9 @@ jobs:
           cache-to: type=inline
 
       - name: Tag latest locally
-        run: docker tag ${{ steps.build_gcc.outputs.imageid }} aminya/${{ matrix.container.image }}-gcc:latest
+        run: |
+          docker pull aminya/${{ matrix.container.image }}-gcc:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }}@${{ steps.build_gcc.outputs.imageid }}
+          docker tag aminya/${{ matrix.container.image }}-gcc:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}-gcc:latest
 
       - name: Push latest to Docker Hub
         if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'ubuntu' }}
@@ -390,7 +396,9 @@ jobs:
           cache-to: type=inline
 
       - name: Tag latest locally
-        run: docker tag ${{ steps.build_mingw.outputs.imageid }} aminya/${{ matrix.container.image }}-mingw:latest
+        run: |
+          docker pull aminya/${{ matrix.container.image }}-mingw:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }}@${{ steps.build_mingw.outputs.imageid }}
+          docker tag aminya/${{ matrix.container.image }}-mingw:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}-mingw:latest
 
       - name: Push latest to Docker Hub
         if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'ubuntu' }}
